bindings/flutter/lib/flutter_kevy_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for the kevy-ffi C ABI (crates/kevy-ffi/include/kevy.h).
///
/// Regenerate with `dart run ffigen --config ffigen.yaml`.
///
class FlutterKevyBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterKevyBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterKevyBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Open a persistent store rooted at dir (UTF-8, dir_len bytes, no NUL
  /// needed). Replays its log on open. NULL on failure.
  ffi.Pointer<KevyDbHandle> kevy_open(ffi.Pointer<ffi.Uint8> dir, int dir_len) {
    return _kevy_open(dir, dir_len);
  }

  late final _kevy_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<KevyDbHandle> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
        >
      >('kevy_open');
  late final _kevy_open = _kevy_openPtr
      .asFunction<
        ffi.Pointer<KevyDbHandle> Function(ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Open a pure in-memory store — nothing survives the process.
  ffi.Pointer<KevyDbHandle> kevy_open_mem() {
    return _kevy_open_mem();
  }

  late final _kevy_open_memPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<KevyDbHandle> Function()>>(
        'kevy_open_mem',
      );
  late final _kevy_open_mem = _kevy_open_memPtr
      .asFunction<ffi.Pointer<KevyDbHandle> Function()>();

  /// Close the store. The handle must not be used afterwards.
  void kevy_close(ffi.Pointer<KevyDbHandle> db) {
    return _kevy_close(db);
  }

  late final _kevy_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<KevyDbHandle>)>>(
        'kevy_close',
      );
  late final _kevy_close = _kevy_closePtr
      .asFunction<void Function(ffi.Pointer<KevyDbHandle>)>();

  /// Execute one command; argv[0] is the verb ("SET", "IDX.CREATE", …).
  /// Writes the RESP reply to *out. Returns 0 on success — note a protocol
  /// error (-ERR …) is still a successful call with a RESP error in *out.
  /// Non-zero = the call itself was misused; *out is empty, do not free.
  int kevy_cmd(
    ffi.Pointer<KevyDbHandle> db,
    int argc,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> argv,
    ffi.Pointer<ffi.Size> argv_len,
    ffi.Pointer<KevyBuf> out,
  ) {
    return _kevy_cmd(db, argc, argv, argv_len, out);
  }

  late final _kevy_cmdPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<KevyDbHandle>,
            ffi.Size,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
            ffi.Pointer<KevyBuf>,
          )
        >
      >('kevy_cmd');
  late final _kevy_cmd = _kevy_cmdPtr
      .asFunction<
        int Function(
          ffi.Pointer<KevyDbHandle>,
          int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<KevyBuf>,
        )
      >();

  /// Scalar fast path — GET/SET without argv or RESP framing. The lane the
  /// mobile bindings' hot loop lives on. kevy_get: 1 hit / 0 miss / neg
  /// misuse; kevy_set: 0 ok / neg misuse (ttl_ms 0 = no TTL).
  int kevy_get(
    ffi.Pointer<KevyDbHandle> db,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<KevyBuf> out,
  ) {
    return _kevy_get(db, key, key_len, out);
  }

  late final _kevy_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<KevyDbHandle>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<KevyBuf>,
          )
        >
      >('kevy_get');
  late final _kevy_get = _kevy_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<KevyDbHandle>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<KevyBuf>,
        )
      >();

  int kevy_set(
    ffi.Pointer<KevyDbHandle> db,
    ffi.Pointer<ffi.Uint8> key,
    int key_len,
    ffi.Pointer<ffi.Uint8> val,
    int val_len,
    int ttl_ms,
  ) {
    return _kevy_set(db, key, key_len, val, val_len, ttl_ms);
  }

  late final _kevy_setPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<KevyDbHandle>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Uint64,
          )
        >
      >('kevy_set');
  late final _kevy_set = _kevy_setPtr
      .asFunction<
        int Function(
          ffi.Pointer<KevyDbHandle>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
        )
      >();

  /// Free any KevyBuf returned by this library: pass its three fields
  /// unchanged. Scalars, not the struct by value — indirect struct passing
  /// (AArch64, >16 bytes) is beyond several FFI loaders. Null ptr = no-op.
  void kevy_buf_free(ffi.Pointer<ffi.Uint8> ptr, int len, int cap) {
    return _kevy_buf_free(ptr, len, cap);
  }

  late final _kevy_buf_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Size)
        >
      >('kevy_buf_free');
  late final _kevy_buf_free = _kevy_buf_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>, int, int)>();

  /// Subscribe to one channel / one glob pattern. NULL on failure.
  ffi.Pointer<KevySubHandle> kevy_subscribe(
    ffi.Pointer<KevyDbHandle> db,
    ffi.Pointer<ffi.Uint8> chan,
    int chan_len,
  ) {
    return _kevy_subscribe(db, chan, chan_len);
  }

  late final _kevy_subscribePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<KevySubHandle> Function(
            ffi.Pointer<KevyDbHandle>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('kevy_subscribe');
  late final _kevy_subscribe = _kevy_subscribePtr
      .asFunction<
        ffi.Pointer<KevySubHandle> Function(
          ffi.Pointer<KevyDbHandle>,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  ffi.Pointer<KevySubHandle> kevy_psubscribe(
    ffi.Pointer<KevyDbHandle> db,
    ffi.Pointer<ffi.Uint8> pat,
    int pat_len,
  ) {
    return _kevy_psubscribe(db, pat, pat_len);
  }

  late final _kevy_psubscribePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<KevySubHandle> Function(
            ffi.Pointer<KevyDbHandle>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('kevy_psubscribe');
  late final _kevy_psubscribe = _kevy_psubscribePtr
      .asFunction<
        ffi.Pointer<KevySubHandle> Function(
          ffi.Pointer<KevyDbHandle>,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  /// Drain one pending frame without blocking.
  /// 1 = frame written to *out (RESP array: message / pmessage / acks);
  /// 0 = nothing queued; negative = misuse.
  int kevy_sub_next(ffi.Pointer<KevySubHandle> sub, ffi.Pointer<KevyBuf> out) {
    return _kevy_sub_next(sub, out);
  }

  late final _kevy_sub_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<KevySubHandle>, ffi.Pointer<KevyBuf>)
        >
      >('kevy_sub_next');
  late final _kevy_sub_next = _kevy_sub_nextPtr
      .asFunction<
        int Function(ffi.Pointer<KevySubHandle>, ffi.Pointer<KevyBuf>)
      >();

  /// Block until one frame is queued or timeout_ms elapses (0 = wait forever).
  /// Parks the thread — no busy-poll — so a push-style poller can wait in the
  /// kernel instead of spinning kevy_sub_next.
  /// 1 = frame written to *out; 0 = timeout; negative = misuse / bus closed.
  int kevy_sub_wait(
    ffi.Pointer<KevySubHandle> sub,
    int timeout_ms,
    ffi.Pointer<KevyBuf> out,
  ) {
    return _kevy_sub_wait(sub, timeout_ms, out);
  }

  late final _kevy_sub_waitPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<KevySubHandle>,
            ffi.Uint64,
            ffi.Pointer<KevyBuf>,
          )
        >
      >('kevy_sub_wait');
  late final _kevy_sub_wait = _kevy_sub_waitPtr
      .asFunction<
        int Function(ffi.Pointer<KevySubHandle>, int, ffi.Pointer<KevyBuf>)
      >();

  /// Close the subscription (unsubscribes everything it held).
  void kevy_sub_close(ffi.Pointer<KevySubHandle> sub) {
    return _kevy_sub_close(sub);
  }

  late final _kevy_sub_closePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<KevySubHandle>)>
      >('kevy_sub_close');
  late final _kevy_sub_close = _kevy_sub_closePtr
      .asFunction<void Function(ffi.Pointer<KevySubHandle>)>();

  /// Engine version, e.g. "4.0.0". Static string — do not free.
  ffi.Pointer<ffi.Char> kevy_version() {
    return _kevy_version();
  }

  late final _kevy_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'kevy_version',
      );
  late final _kevy_version = _kevy_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Runtime ABI version; compare against KEVY_ABI at startup.
  int kevy_abi() {
    return _kevy_abi();
  }

  late final _kevy_abiPtr = _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
    'kevy_abi',
  );
  late final _kevy_abi = _kevy_abiPtr.asFunction<int Function()>();
}

final class KevyDbHandle extends ffi.Opaque {}

final class KevySubHandle extends ffi.Opaque {}

/// A buffer owned by kevy. Free with kevy_buf_free(); never free() it.
/// All three fields must reach kevy_buf_free() untouched.
final class KevyBuf extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;
}

const int KEVY_ABI = 1;
